# matam_ex1

./: CMakeLists.txt
Wet/: amount_set_str_list_str_tests.c
